--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,4 +27,10 @@
 
 
 <!-- scripts -->
+<script>
+  var markers =<%- JSON.stringify(places)%>
+</script>
+<script async defer
+  src="https://maps.googleapis.com/maps/api/js?key=None AIzaSyCm4CWtt9Xil7qU08H6HueqbyYzIsKXUK8&callback=initMap">
+</script>
 <script src="/js/script.js"></script>
